//file:noinspection UnnecessaryQualifiedReference
plugins {
    id("java")
    id("application")
    id("io.ebean") version "17.2.0"
    id("org.openapi.generator") version "7.16.0"
    id("io.spring.dependency-management") version "1.1.7"

    id("jacoco")
    id("com.github.node-gradle.node") version "7.1.0"
    id("com.diffplug.spotless") version "8.0.0"
    id("name.remal.sonarlint") version "7.0.0"

    id("org.hidetake.ssh") version "2.12.0"
    id("de.undercouch.download") version "5.6.0"
    id("net.researchgate.release") version "3.1.0"
    id("com.google.cloud.tools.jib") version "3.5.2"
    id("com.google.osdetector") version "1.7.3"
}

release {
    tagTemplate = 'V${version}'
}

allprojects {

    apply plugin: "java"
    apply plugin: "jacoco"
    apply plugin: "project-report"
    apply plugin: "com.diffplug.spotless"
    apply plugin: "name.remal.sonarlint"
    apply plugin: "org.hidetake.ssh"
    apply plugin: "com.github.node-gradle.node"
    apply plugin: "io.spring.dependency-management"
    apply plugin: "com.google.osdetector"

    group = "cool.houge.mahu"

    java {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
        options.compilerArgs += [
            "-parameters"
        ]
        options.warnings = false
    }

    test {
        useJUnitPlatform()
    }

    node {
        download = true
        version = "22.19.0"
        distBaseUrl = "https://mirrors.huaweicloud.com/nodejs/"
        workDir = rootProject.layout.projectDirectory.dir(".gradle/")
        pnpmWorkDir = rootProject.layout.projectDirectory.dir(".gradle/")
    }

    jacoco {
        toolVersion = "0.8.13"
    }

    jacocoTestReport {
        dependsOn test
        reports {
            html.required = true
            html.outputLocation = layout.buildDirectory.dir("reports/jacoco")
        }
    }

    spotless {
        def osName = System.getProperty("os.name").toLowerCase()
        def nodeExe = osName.contains("win") ? node.resolvedNodeDir.file("node.exe").get() :
            node.resolvedNodeDir.file("bin/node").get()
        def npmExe = osName.contains("win") ? node.resolvedNodeDir.file("npm.cmd").get() :
            node.resolvedNodeDir.file("bin/npm").get()
        def cacheDir = "${rootDir}/.gradle/spotless-npm-install-cache"
        def prettierVersion = "3.6.2"

        java {
            palantirJavaFormat("2.80.0")
            targetExclude("**/src/main/gen/**/*", "**/build/generated/**/*")
        }
        sql {
            target("src/**/*.sql")
            prettier(["prettier": prettierVersion, "prettier-plugin-sql": "0.19.2"])
                .config([
                    "plugins"     : ["prettier-plugin-sql"],
                    "language"    : 'postgresql',
                    "keywordCase" : 'upper',
                    "dataTypeCase": 'upper',
                ])
                .nodeExecutable(nodeExe)
                .npmExecutable(npmExe)
                .npmInstallCache(cacheDir)
                .npmrc("${rootDir}/.npmrc")
        }
        yaml {
            target("src/**/*.yaml", "openapi/admin/**/*.yaml")
            prettier(["prettier": prettierVersion])
                .nodeExecutable(nodeExe)
                .npmExecutable(npmExe)
                .npmInstallCache(cacheDir)
                .npmrc("${rootDir}/.npmrc")
        }
        format("xml") {
            target("src/**/*.xml")
            prettier(["prettier": prettierVersion, "@prettier/plugin-xml": "3.4.2"])
                .config(["tabSize": 4, "plugins": ["@prettier/plugin-xml"]])
                .nodeExecutable(nodeExe)
                .npmExecutable(npmExe)
                .npmInstallCache(cacheDir)
                .npmrc("${rootDir}/.npmrc")
        }
    }
    [tasks.spotlessSql, tasks.spotlessYaml, tasks.spotlessXml].forEach {
        it.dependsOn(nodeSetup)
    }

    sonarLint {
        ignoreFailures = true
        languages {
            include("java")
        }
        rules {
            disable("java:S1611")
        }
        ignoredPaths.add("**/oas/vo/**")
        ignoredPaths.add("**/oas/controller/**")
    }

    sonarlintMain {
        reports {
            html.required = true
        }
    }

    configurations {
        configureEach {
            exclude group: "org.slf4j", module: "slf4j-simple"
            exclude group: "io.avaje", module: "avaje-config"
            exclude group: "io.ebean", module: "ebean-migration"
            exclude group: "io.avaje", module: "avaje-validator-inject-plugin"
            exclude group: "io.avaje", module: "avaje-validator-http-plugin"
        }
    }

    // 部署服务器配置
    remotes {
        dev01 {
            host = "mahu.houge.cool"
            user = "root"
            identity = file("${System.getProperty("user.home")}/.ssh/id_rsa")
        }
    }

    dependencyManagement {
        imports {
            mavenBom("org.springframework.boot:spring-boot-dependencies:4.0.0")
            mavenBom("io.helidon:helidon-bom:4.3.2")
            mavenBom("io.ebean:ebean-bom:17.2.0")
            mavenBom("org.testcontainers:testcontainers-bom:1.21.3")
        }
        dependencies {
            dependency("io.helidon.bundles:helidon-bundles-apt:4.3.0")
            dependency("org.checkerframework:checker-qual:3.49.5")
            dependency("com.google.errorprone:error_prone_annotations:2.41.0")
            dependency("com.google.guava:guava:33.4.8-jre")
            dependency("org.apache.commons:commons-collections4:4.5.0")
            dependency("org.apache.commons:commons-text:1.14.0")
            dependency("org.apache.commons:commons-compress:1.28.0")
            dependency("org.opensearch.client:opensearch-java:3.2.0")

            dependency("io.avaje:avaje-validator-constraints:2.14")
            dependency("io.avaje:avaje-validator:2.14")
            dependency("io.avaje:avaje-validator-generator:2.14")
            dependency("org.mapstruct:mapstruct:1.6.3")
            dependency("org.mapstruct:mapstruct-processor:1.6.3")
            dependency("org.instancio:instancio-junit:5.4.1")
            dependency("io.minio:minio:8.5.17")
            dependency("com.password4j:password4j:1.8.1")
            dependency("com.github.RoaringBitmap.RoaringBitmap:roaringbitmap:1.5.2")
            dependency("io.github.nstdio:rsql-parser:2.3.4")
            dependency("com.github.kagkarlsson:db-scheduler:16.6.0")
            dependency("org.dhatim:fastexcel:0.19.0")
            dependency("org.dhatim:fastexcel-reader:0.19.0")
            dependency("com.github.f4b6a3:ulid-creator:5.2.3")

            // 微信第三方 SDK
            dependency("com.github.binarywang:weixin-java-miniapp:4.7.7-20250730.233020")
            dependency("com.github.binarywang:weixin-java-pay:4.7.7-20250730.233020")
        }
        // resolutionStrategy {
        //     cacheChangingModulesFor 0, 'seconds'
        // }
    }

    dependencies {
        annotationProcessor(libs.lombok)
        annotationProcessor(libs.mapstruct.processor)
        annotationProcessor(libs.avaje.validator.generator)
        compileOnly(libs.lombok)
        compileOnly(libs.mapstruct)

        testAnnotationProcessor(libs.lombok)
        testCompileOnly(libs.lombok)
        testImplementation(libs.bundles.testing)
        testImplementation(libs.bundles.log4j)
    }

    repositories {
        maven {url "https://repo.huaweicloud.com/repository/maven"}
        maven {url "https://jitpack.io"}
        mavenLocal()
        mavenCentral()
    }
}

tasks.register("openapiDepsInstall", com.github.gradle.node.pnpm.task.PnpmTask.class) {
    group("openapi tools")
    workingDir = rootProject.file("openapi")
    pnpmCommand = [
        "install"
    ]
}
